# gzat

./: .gitignore  CMakeLists.txt
cmake/finders/: FindGcov.cmake
cmake/templates/: gzatConfig.cmake.in
include/: gzat_parser.hpp
source/: gzat_parser.cpp
test/: CMakeLists.txt  gzat_test.cpp
